--- a/index.html
+++ b/index.html
@@ -2,326 +2,233 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<title>The Quiet Companion — Bespoke Daily Support</title>
-<meta name="description" content="Private, human daily support for work, family, health and inner life. Personal messages crafted for you." />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>The Quiet Companion — Begin Your Private Support</title>
+<meta name="description" content="Private, human daily support for work, family, health and inner life. Start onboarding to receive personalized daily messages." />
 
-<!-- Fonts: Playfair Display (headlines) + Inter (body) -->
+<!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
   :root{
-    --bg-1: #07070b;
-    --bg-2: #0f1116;
-    --panel: rgba(24,24,28,0.6);
-    --gold-1: #d4af37; /* soft gold */
-    --gold-2: #c59a2f; /* bronze tone */
-    --muted: #cbd5e1;
-    --accent-shadow: 0 10px 40px rgba(198,150,60,0.12);
+    --bg: #f7f7f5;
+    --surface: #ffffff;
+    --muted: #6b7280;
+    --text: #0b1320;
+    --gold-1: #b8862f;
+    --gold-2: #f0c675;
     --radius: 16px;
+    --shadow: 0 18px 60px rgba(9,18,28,0.06);
   }
 
-  /* Reset & global */
   *{box-sizing:border-box;margin:0;padding:0}
   html,body{height:100%}
   body{
-    font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    background: radial-gradient(1200px 400px at 10% 8%, rgba(210,170,60,0.06), transparent),
-                linear-gradient(180deg, var(--bg-1) 0%, var(--bg-2) 100%);
-    color: #eef2f7;
+    font-family:"Inter",system-ui,-apple-system,"Segoe UI",Roboto,Arial;
+    background: linear-gradient(180deg,var(--bg) 0%, #ffffff 100%);
+    color:var(--text);
     -webkit-font-smoothing:antialiased;
     -moz-osx-font-smoothing:grayscale;
-    padding: 48px 22px;
+    padding:28px 16px;
     display:flex;
     justify-content:center;
-    align-items:flex-start;
   }
 
-  /* container */
   .wrap{
     width:100%;
     max-width:1100px;
-    background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-    border-radius: 20px;
-    padding: 48px;
-    box-shadow: 0 30px 80px rgba(5,6,10,0.6), var(--accent-shadow);
-    border: 1px solid rgba(255,255,255,0.03);
-    backdrop-filter: blur(6px) saturate(120%);
+    background:var(--surface);
+    border-radius:18px;
+    padding:40px;
+    box-shadow:var(--shadow);
+    border:1px solid rgba(11,19,32,0.04);
   }
 
-  /* header */
-  .site-head{
+  header{
     display:flex;
-    gap: 24px;
-    align-items:center;
     justify-content:space-between;
+    align-items:center;
+    gap:16px;
     flex-wrap:wrap;
   }
 
-  .brand{
-    display:flex;
-    gap:18px;
-    align-items:center;
+  .brand{ display:flex; gap:14px; align-items:center; }
+  .badge{
+    width:64px;height:64px;border-radius:12px;
+    background: linear-gradient(135deg, rgba(184,134,47,0.12), rgba(240,198,117,0.03));
+    display:grid;place-items:center;
+    border:1px solid rgba(184,134,47,0.09);
   }
-
-  .brand-badge{
-    width:68px;
-    height:68px;
-    border-radius:12px;
-    background: linear-gradient(135deg, rgba(212,175,55,0.12), rgba(197,154,47,0.06));
-    display:grid;
-    place-items:center;
-    border:1px solid rgba(212,175,55,0.12);
-    box-shadow: 0 8px 30px rgba(197,154,47,0.06) inset;
-  }
-
-  .brand-badge svg{filter: drop-shadow(0 6px 14px rgba(0,0,0,0.45));}
-
-  .brand hgroup h1{
-    font-family: "Playfair Display", serif;
-    font-size:1.6rem;
-    line-height:1;
+  .brand h1{
+    font-family:"Playfair Display",serif;
+    font-size:1.5rem;
     color:var(--gold-1);
-    letter-spacing: -0.6px;
+    letter-spacing:-0.4px;
   }
-  .brand hgroup p{
-    margin-top:4px;
-    color:var(--muted);
-    font-size:0.95rem;
-  }
+  .brand p{ color:var(--muted); font-size:0.95rem; margin-top:4px; }
 
-  /* hero */
+  .meta-right{ text-align:right; color:var(--muted) }
+  .meta-right .tag{ font-weight:700; color:var(--gold-1) }
+
   .hero{
-    margin-top:28px;
     display:grid;
-    grid-template-columns: 1fr 360px;
-    gap: 28px;
+    grid-template-columns:1fr 380px;
+    gap:28px;
     align-items:start;
+    margin-top:28px;
   }
 
-  .hero-left{
-    padding-right:10px;
-  }
-
-  .eyebrow{
-    color:#d6c48a;
-    font-weight:600;
-    font-size:0.92rem;
-    letter-spacing:0.6px;
-    margin-bottom:12px;
-  }
-
-  h2.main-title{
-    font-family: "Playfair Display", serif;
-    font-size:2.6rem;
-    color:linear-gradient(#fff,#eee);
-    margin-bottom:18px;
+  .lead-eyebrow{ color:var(--gold-1); font-weight:700; font-size:0.95rem; margin-bottom:8px; }
+  h2.hero-title{
+    font-family:"Playfair Display",serif;
+    font-size:2.4rem;
     line-height:1.05;
-    text-shadow: 0 6px 30px rgba(0,0,0,0.5);
-    color: #f7ecd7;
+    color:#0b1320;
+    margin-bottom:14px;
   }
-
-  p.lead{
-    color:#dfe7ef;
+  p.hero-sub{
+    color:#334155;
     font-size:1.05rem;
-    line-height:1.9;
-    margin-bottom:22px;
-    max-width:74ch;
+    line-height:1.7;
+    margin-bottom:18px;
   }
 
-  .quiet-box{
-    background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-    border-left: 5px solid rgba(197,154,47,0.95);
-    padding: 22px;
-    margin-top:18px;
-    border-radius: 12px;
-    color:#e8edf7;
-    font-style:italic;
-    box-shadow: 0 14px 30px rgba(0,0,0,0.45);
-  }
-
-  /* right card (CTA) */
-  .card {
-    background: linear-gradient(180deg, rgba(22,22,26,0.7), rgba(18,18,22,0.6));
-    border-radius: 14px;
-    padding: 22px;
-    border: 1px solid rgba(212,175,55,0.08);
-    box-shadow: 0 20px 50px rgba(3,3,4,0.55);
-  }
-  .card small { color:var(--muted); display:block; margin-bottom:12px; }
-  .card h3{
-    font-family: "Playfair Display", serif;
-    color:var(--gold-1);
-    margin-bottom:8px;
-    font-size:1.15rem;
-  }
-  .card p { color:#e6eef9; font-size:0.98rem; margin-bottom:16px; }
-
-  /* CTA button — only one */
-  .cta {
-    display:inline-block;
-    text-decoration:none;
-    padding:14px 20px;
+  .quiet{
+    background:linear-gradient(180deg, rgba(250,250,249,1), rgba(248,247,244,1));
+    padding:16px;
     border-radius:12px;
-    font-weight:700;
-    font-size:1rem;
-    background: linear-gradient(135deg, #b8862f, #f0c674 80%);
-    color:#0d0804;
-    box-shadow: 0 10px 30px rgba(184,134,47,0.12), 0 2px 0 rgba(0,0,0,0.18) inset;
-    transition: transform .18s ease, box-shadow .18s ease;
-    display:inline-flex;
-    gap:10px;
-    align-items:center;
+    border-left:4px solid var(--gold-1);
+    color:#263044;
+    font-style:italic;
+    box-shadow:0 8px 24px rgba(11,19,32,0.03);
   }
-  .cta:focus, .cta:hover{ transform:translateY(-4px); box-shadow: 0 18px 44px rgba(184,134,47,0.16); }
-  .cta svg{height:18px;width:18px;opacity:0.98}
+
+  /* right card */
+  .card{
+    background: linear-gradient(180deg,#fff,#fbfaf8);
+    border-radius:12px;
+    padding:20px;
+    border:1px solid rgba(11,19,32,0.04);
+    box-shadow: 0 12px 36px rgba(11,19,32,0.03);
+  }
+  .card small{ color:var(--muted); display:block; margin-bottom:8px; font-weight:600; }
+  .card h3{ font-family:"Playfair Display",serif; color:var(--gold-1); margin-bottom:6px; font-size:1.15rem; }
+  .card p{ color:#334155; margin-bottom:14px; }
+
+  /* CTA link styled as button */
+  .cta{
+    display:inline-flex;
+    align-items:center;
+    gap:10px;
+    text-decoration:none;
+    padding:12px 18px;
+    border-radius:10px;
+    font-weight:800;
+    background: linear-gradient(135deg,var(--gold-1),var(--gold-2));
+    color:#081018;
+    box-shadow: 0 14px 34px rgba(184,134,47,0.12);
+    transition: transform .16s ease, box-shadow .16s ease;
+  }
+  .cta:hover{ transform:translateY(-3px); box-shadow: 0 22px 50px rgba(184,134,47,0.16); }
 
   /* sections */
-  section{ margin-top:36px; }
-  h3.section-title{
-    color:var(--gold-2);
-    font-family: "Playfair Display", serif;
-    font-size:1.25rem;
-    margin-bottom:12px;
-  }
-  .cols{
-    display:grid;
-    grid-template-columns: repeat(2, minmax(0,1fr));
-    gap:20px;
-  }
-  ul{padding-left:18px;color:#dbe7f6}
-  li{margin:8px 0}
+  section{ margin-top:26px; }
+  .features{ display:grid; grid-template-columns:repeat(3,1fr); gap:14px; margin-top:12px; }
+  .feature{ background:#fff; padding:12px; border-radius:10px; border-left:4px solid var(--gold-1); box-shadow:0 6px 18px rgba(11,19,32,0.03) }
+  .feature h4{ font-family:"Playfair Display",serif; color:var(--gold-1); margin-bottom:6px; font-size:1rem }
+  .feature p{ color:#334155; font-size:0.95rem; line-height:1.5; margin:0 }
 
-  /* footer */
-  footer{
-    margin-top:42px;
-    color: #9aa6b6;
-    font-size:0.95rem;
-    text-align:center;
+  footer{ margin-top:28px; text-align:center; color:var(--muted); font-size:0.95rem }
+
+  @media (max-width:980px){
+    .hero{ grid-template-columns:1fr; }
+    .card{ order:-1; }
+    .features{ grid-template-columns:1fr; }
   }
 
-  /* responsive */
-  @media (max-width:1000px){
-    .hero{grid-template-columns: 1fr 320px}
-  }
-  @media (max-width:820px){
-    .hero{grid-template-columns:1fr; }
-    .card{order:-1;margin-bottom:18px}
-    .cols{grid-template-columns:1fr}
-  }
-  @media (max-width:480px){
-    .wrap{padding:28px}
-    h2.main-title{font-size:1.9rem}
-  }
-
-  /* small accent line */
-  .accent-line{
-    height:4px;
-    width:84px;
-    border-radius:4px;
-    background: linear-gradient(90deg,#f2d99a,#c49a2a);
-    margin-top:8px;
-    box-shadow: 0 6px 18px rgba(196,154,47,0.12);
-  }
-
-  /* accessible focus */
-  a:focus{ outline: 3px solid rgba(212,175,55,0.16); outline-offset:4px; border-radius:10px }
+  /* accessibility */
+  a:focus{ outline: 3px solid rgba(184,134,47,0.12); outline-offset:4px; border-radius:8px; }
 </style>
 </head>
-
 <body>
-  <div class="wrap" role="main">
-    <header class="site-head" aria-label="Site header">
+  <div class="wrap" role="main" aria-labelledby="main-title">
+    <header>
       <div class="brand">
-        <div class="brand-badge" aria-hidden="true">
-          <!-- simple monogram icon -->
-          <svg width="40" height="40" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <rect x="1" y="1" width="22" height="22" rx="5" fill="rgba(212,175,55,0.06)"/>
-            <path d="M7 16c2-3 6-8 10-6" stroke="#d4af37" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+        <div class="badge" aria-hidden="true">
+          <svg width="36" height="36" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <rect x="1" y="1" width="22" height="22" rx="5" fill="rgba(184,134,47,0.06)"/>
+            <path d="M6 15c2-3 6-8 11-6" stroke="#b8862f" stroke-width="1.6" stroke-linecap="round"/>
           </svg>
         </div>
-
-        <hgroup>
-          <h1>The Quiet Companion</h1>
+        <div>
+          <h1 id="main-title">The Quiet Companion</h1>
           <p>Personal daily guidance for work, family, health & inner life</p>
-        </hgroup>
+        </div>
       </div>
 
-      <!-- small visual accent on the right (keeps header balanced) -->
-      <div aria-hidden="true" style="opacity:0.9; text-align:right;">
-        <div style="font-size:0.95rem;color:var(--muted)">Private · Daily · Human</div>
-        <div class="accent-line"></div>
+      <div class="meta-right" aria-hidden="true">
+        <div class="tag">Private · Tailored · Daily</div>
+        <div style="margin-top:6px;font-size:0.92rem">Designed for people in the US & Europe</div>
       </div>
     </header>
 
-    <div class="hero">
-      <div class="hero-left">
-        <div class="eyebrow">You're invited to be seen</div>
-        <h2 class="main-title">You don't have to carry it all alone</h2>
-        <p class="lead">
-          A private, human companion that meets you where you are — at work, at home, in your body, and in your relationships.
-          Short, careful messages written for you each day to steady your mind and honor your life.
+    <div class="hero" role="region" aria-label="Intro">
+      <div>
+        <div class="lead-eyebrow">You are invited to be seen</div>
+        <h2 class="hero-title">You don't have to carry it all alone</h2>
+        <p class="hero-sub">
+          Short, human messages written for how you actually live — your work, family responsibilities, health, and the risks you want to take.
+          Start a short onboarding now so each message meets your day, your limits, and your courage.
         </p>
 
-        <div class="quiet-box" aria-live="polite">
-          This is not motivation or a checklist. It is daily presence — written for you, about your day, and shaped by what you share.
+        <div class="quiet" aria-live="polite">
+          Not motivation. Not lecture. Just steady daily presence — written for you, shaped by what you share.
         </div>
 
         <section>
-          <h3 class="section-title">What this supports</h3>
-          <div class="cols" role="list">
-            <div>
-              <h4 style="margin-bottom:8px;color:#e8edf7;font-weight:600">Work & Performance</h4>
-              <ul>
-                <li>Clearer decisions under pressure</li>
-                <li>Maintain calm while staying effective</li>
-                <li>Boundaries that protect your focus</li>
-              </ul>
+          <div class="features" role="list">
+            <div class="feature" role="listitem">
+              <h4>Work & Decisions</h4>
+              <p>Clear prompts to handle pressure without losing calm.</p>
             </div>
-            <div>
-              <h4 style="margin-bottom:8px;color:#e8edf7;font-weight:600">Family, Health & Home</h4>
-              <ul>
-                <li>Gentle practices for energy and rest</li>
-                <li>Support with caregiving, illness, or family tension</li>
-                <li>Hold space for what matters most</li>
-              </ul>
+            <div class="feature" role="listitem">
+              <h4>Family & Care</h4>
+              <p>Guidance that respects relationship complexity and caregiving realities.</p>
+            </div>
+            <div class="feature" role="listitem">
+              <h4>Health & Rest</h4>
+              <p>Micro-practices that protect your energy and body over time.</p>
             </div>
           </div>
         </section>
       </div>
 
-      <!-- right card with single CTA -->
       <aside class="card" aria-labelledby="cta-title">
         <small>Begin with one step</small>
         <h3 id="cta-title">Register for Private Daily Messages</h3>
-        <p>Start with a short, private onboarding so your messages are shaped to your life — not generic, not automated.</p>
+        <p>Complete a short onboarding so your messages are personal, private, and useful — not generic or automated.</p>
 
-        <!-- ONLY CTA kept -->
-        <a href="https://daily-support.vercel.app/onboarding-individual.html"
-           class="cta"
-           role="button"
-           aria-label="Register Individual Data — open registration"
-           ><!-- icon --> 
-           <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-             <path d="M12 2v20" stroke="#3a2b0a" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-             <path d="M5 9c1.333-2 4-3 7-3s5.667 1 7 3" stroke="#3a2b0a" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-           </svg>
-           Register Individual Data
+        <!-- CTA: opens the onboarding/registration page -->
+        <a class="cta" href="onboarding-individual.html" role="link" aria-label="Open registration — Register Individual Data">
+          <!-- small icon -->
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <path d="M12 2v20" stroke="#2b1b05" stroke-width="1.6" stroke-linecap="round"/>
+            <path d="M5 9c1.333-2 4-3 7-3s5.667 1 7 3" stroke="#2b1b05" stroke-width="1.6" stroke-linecap="round"/>
+          </svg>
+          Register Individual Data
         </a>
 
-        <p style="margin-top:14px;color:var(--muted);font-size:0.92rem">
-          Your responses stay private. You can pause or change delivery times anytime.
+        <p style="margin-top:12px;color:var(--muted);font-size:0.95rem">
+          Your responses remain private. You can pause, edit, or delete at any time.
         </p>
       </aside>
     </div>
 
     <footer>
-      <div style="max-width:820px;margin:auto">
-        Private. Human. Daily. — Support that meets you with dignity and clarity.
-      </div>
+      Private. Human. Daily. — Messages written with care, for how you actually live.
     </footer>
   </div>
 </body>
-        </html>
+            </html>
